# IReckon

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  build_exe.py  main.py  py.typed  pyproject.toml  requirements.txt  run.sh  run_streamlit.py
.github/workflows/: build-apk.yml  build.yml  ci.yml
.streamlit/: config.toml
ai/: __init__.py  capability_pool.py  lite_llm.py
ai/roles/: __init__.py  base_agent.py  content_filter.py  creative.py  deliverer.py  executor.py  learner.py  reviewer.py  scheduler.py  tool_manager.py
app/: __init__.py
app/agents/: __init__.py  base.py  content_filter.py  creative.py  deliverer.py  executor.py  learner.py  reviewer.py  scheduler.py  tool_manager.py
app/core/: __init__.py  config.py  database.py  exceptions.py  logger.py  state.py  updater.py
app/engine/: __init__.py  board.py  cost.py  detector.py  learner.py  machine.py  registry.py  room.py  self_improve.py  style.py  tasks.py
app/knowledge/: __init__.py  files.py  vector.py
app/llm/: __init__.py  client.py  pool.py
app/security/: __init__.py  filter.py  mining.py  sandbox.py  scanner.py  supply.py
app/tools/: __init__.py  assembler.py  library.py  registry.py
app/tools/builtin/calculator/: calculator.py  manifest.json
app/tools/builtin/datetime_helper/: datetime_helper.py  manifest.json
app/tools/builtin/github_speedup/: github_speedup.py  manifest.json
app/tools/builtin/hash_encrypt/: hash_encrypt.py  manifest.json
app/tools/builtin/http_tool/: http_tool.py  manifest.json
app/tools/builtin/json_transformer/: json_transformer.py  manifest.json
app/tools/builtin/regex_helper/: manifest.json  regex_helper.py
app/tools/builtin/string_toolbox/: manifest.json  string_toolbox.py
app/utils/: __init__.py
app/web/: __init__.py  api.py  push.py  ws.py
ci/workflows/: build-apk.yml
config/: .gitignore  build_exe.spec  buildozer.spec  config.yaml
config/prompts/: creative.j2  deliverer.j2  executor_think.j2  learner.j2  reviewer_correctness.j2  reviewer_efficiency.j2  scheduler_recruit.j2  self_improve.j2  tool_manager.j2
config/themes/: catgirl.json  programmer.json
core/: __init__.py  config_manager.py  db.py  logger.py  state_manager.py
data/: .last_update_check
deploy/: Dockerfile  docker-compose.yml
docs/: BUILD_APK.md  CHANGELOG.md  LICENSE  MEMO.md  README.md  README_EN.md
frontend/: README.md  app.py  index.html  package-lock.json  package.json  vite.config.js
frontend/components/: chat_view.py  config_panel.py  dashboard.py  style.py
frontend/src/: App.vue  main.js  router.js
frontend/src/api/: index.js
frontend/src/assets/: main.css
frontend/src/components/: BackgroundEffects.vue  ClickEffect.vue  GlobalToolbox.vue  PageTransition.vue  SplashScreen.vue
frontend/src/stores/: taskStore.js
frontend/src/views/: AIInstancesView.vue  ChatView.vue  DashboardView.vue  SelfImproveView.vue  SettingsView.vue  TasksView.vue
frontend/themes/: catgirl.json
frontend/utils/: api_client.py  websocket_client.py
knowledge/: __init__.py  file_kb.py  vector_store.py
scripts/: Makefile  build_exe.bat  build_exe.py  check_system.py  launcher.bat  preflight.sh  run.sh  run_streamlit.py  test_run.py
security/: __init__.py  code_scanner.py  command_filter.py  mining_detector.py  sandbox.py  supply_chain.py
tools/: __init__.py  assembler.py  parts_library.py  registry.py
tools/builtin/calculator/: calculator.py  manifest.json
tools/builtin/datetime_helper/: datetime_helper.py  manifest.json
tools/builtin/github_speedup/: github_speedup.py  manifest.json
tools/builtin/hash_encrypt/: hash_encrypt.py  manifest.json
tools/builtin/http_tool/: http_tool.py  manifest.json
tools/builtin/json_transformer/: json_transformer.py  manifest.json
tools/builtin/regex_helper/: manifest.json  regex_helper.py
tools/builtin/string_toolbox/: manifest.json  string_toolbox.py
ui/: __init__.py  app.py
ui/components/: __init__.py  chat.py  config_panel.py  dashboard.py  style.py
ui/utils/: __init__.py  api.py  ws.py
web/: api.py  websocket.py
workflow/: __init__.py  cost_tracker.py  idle_learner.py  loop_detector.py  meeting_room.py  role_registry.py  state_machine.py  style_engine.py  task_board.py  task_manager.py
