[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ireckon"
version = "0.1.0"
description = "Multi-Agent Autonomous Programming System — AI Factory"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "IReckon Team" },
]
keywords = ["ai", "agent", "code-generation", "llm", "autonomous", "langgraph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[tool.setuptools.packages.find]
include = ["app*", "ui*"]

[project.urls]
Homepage = "https://github.com/ninasukiwww-png/IReckon"
Repository = "https://github.com/ninasukiwww-png/IReckon.git"
Documentation = "https://github.com/ninasukiwww-png/IReckon#readme"
IssueTracker = "https://github.com/ninasukiwww-png/IReckon/issues"

[project.scripts]
ireckon = "main:main"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
show_error_codes = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["F"]
ignore = ["F401"]
extend-safe-fixes = ["F401"]
exclude = ["build", "dist", ".git", "__pycache__", "node_modules"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"app/tools/builtin/**" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.bandit]
exclude_dirs = ["build", "dist", "tests", ".git"]
skips = ["B101", "B311", "B403", "B404", "B603"]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
